# labviz

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
labviz/: errors.py  plotter.py  series.py  units.py
labviz/tests/: test_errors.py  test_units.py
tests/: test_series.py  test_units.py
