[project]
name = "labviz"
version = "0.0.1"
authors = [
    { name="Artem Antonchikov", email="fynjyxbrjd@gmail.com" },
]
description = "A tool to assist in recording and visualizing lab data"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/quadratic-bit/labviz"
Issues = "https://github.com/quadratic-bit/labviz/issues"

[build-system]
requires = ["setuptools>=75.2"]
build-backend = "setuptools.build_meta"
